[tool.poetry]
name = "kintone-scraper"
version = "0.1.0"
description = "kintone开发者文档抓取器 - 抓取cybozu开发者网站的所有文档内容"
authors = ["bxu <bxu@example.com>"]
readme = "README.md"
packages = [{include = "kintone_scraper", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.0"
click = "^8.1.0"
rich = "^14.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[tool.poetry.scripts]
kintone-scraper = "kintone_scraper.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true